[package]
name = "sapper_session"
version = "0.1.1"
authors = ["Mike Tang <miketang84@outlook.com>"]
license = "MIT"
description = "Session plugin for sapper framework."
readme = "README.md"
repository = "https://github.com/sappworks/sapper_session"
documentation = "https://docs.rs/sapper_session"
homepage = "https://github.com/sappworks/sapper_session"

[dependencies]
sapper = "0.1"
cookie = "^0.10.1"
time = "^0.1"
